[gd_scene load_steps=4 format=3 uid="uid://c4orfjow1bvl5"]

[ext_resource type="Script" uid="uid://243kok3kqd74" path="res://UI/stack_prompt.gd" id="1_pxsyy"]
[ext_resource type="Texture2D" uid="uid://db6xorxb7d255" path="res://icon.svg" id="2_r434m"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6cmd2"]
texture = ExtResource("2_r434m")

[node name="StackPrompt" type="PanelContainer"]
custom_minimum_size = Vector2(200, 75)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pxsyy")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_6cmd2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "How many?"
horizontal_alignment = 1

[node name="ValueLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "NaN"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 5.0
value = 1.0
rounded = true
scrollable = false
ticks_on_borders = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Confirm" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Confirm"

[node name="Cancel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
modulate = Color(0.961715, 0, 0.00245332, 1)
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
